[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/kenney_ui_audio/mouserelease1.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/kenney_ui_audio/mouseclick1.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/kenney_ui_audio/switch36.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[node name="Button" type="Button"]
anchor_right = 0.125
anchor_bottom = 0.067
margin_bottom = -0.200001
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
script = ExtResource( 4 )

[node name="MouseReleasePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "UI"

[node name="MouseHoverPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "UI"

[node name="MouseClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "UI"
